; ModuleID = '/home/carl/AnghaBench/nnn/src/extr_nnn.c_mkpath.c'
source_filename = "/home/carl/AnghaBench/nnn/src/extr_nnn.c_mkpath.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@PATH_MAX = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (i8*, i8*, i8*)* @mkpath to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @mkpath(i8* %0, i8* %1, i8* %2) #0 {
  %4 = alloca i64, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i64, align 8
  store i8* %0, i8** %5, align 8
  store i8* %1, i8** %6, align 8
  store i8* %2, i8** %7, align 8
  %9 = load i8*, i8** %6, align 8
  %10 = getelementptr inbounds i8, i8* %9, i64 0
  %11 = load i8, i8* %10, align 1
  %12 = sext i8 %11 to i32
  %13 = icmp eq i32 %12, 47
  br i1 %13, label %14, label %19

14:                                               ; preds = %3
  %15 = load i8*, i8** %7, align 8
  %16 = load i8*, i8** %6, align 8
  %17 = load i64, i64* @PATH_MAX, align 8
  %18 = call i64 @xstrlcpy(i8* %15, i8* %16, i64 %17)
  store i64 %18, i64* %4, align 8
  br label %44

19:                                               ; preds = %3
  %20 = load i8*, i8** %5, align 8
  %21 = call i64 @istopdir(i8* %20)
  %22 = icmp ne i64 %21, 0
  br i1 %22, label %23, label %24

23:                                               ; preds = %19
  store i64 1, i64* %8, align 8
  br label %29

24:                                               ; preds = %19
  %25 = load i8*, i8** %7, align 8
  %26 = load i8*, i8** %5, align 8
  %27 = load i64, i64* @PATH_MAX, align 8
  %28 = call i64 @xstrlcpy(i8* %25, i8* %26, i64 %27)
  store i64 %28, i64* %8, align 8
  br label %29

29:                                               ; preds = %24, %23
  %30 = load i8*, i8** %7, align 8
  %31 = load i64, i64* %8, align 8
  %32 = sub i64 %31, 1
  %33 = getelementptr inbounds i8, i8* %30, i64 %32
  store i8 47, i8* %33, align 1
  %34 = load i8*, i8** %7, align 8
  %35 = load i64, i64* %8, align 8
  %36 = getelementptr inbounds i8, i8* %34, i64 %35
  %37 = load i8*, i8** %6, align 8
  %38 = load i64, i64* @PATH_MAX, align 8
  %39 = load i64, i64* %8, align 8
  %40 = sub i64 %38, %39
  %41 = call i64 @xstrlcpy(i8* %36, i8* %37, i64 %40)
  %42 = load i64, i64* %8, align 8
  %43 = add i64 %41, %42
  store i64 %43, i64* %4, align 8
  br label %44

44:                                               ; preds = %29, %14
  %45 = load i64, i64* %4, align 8
  ret i64 %45
}

declare dso_local i64 @xstrlcpy(i8*, i8*, i64) #1

declare dso_local i64 @istopdir(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
